build: move native test execution to Streamline